--- a/duke_groups.ipynb
+++ b/duke_groups.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/tommymcguire/510_final_proj-1/duke_groups.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tommymcguire/510_final_proj-1/duke_groups.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tommymcguire/510_final_proj-1/duke_groups.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbs4\u001b[39;00m \u001b[39mimport\u001b[39;00m BeautifulSoup\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tommymcguire/510_final_proj-1/duke_groups.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -25,9 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Name, Link, Description]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the URL you want to scrape\n",
     "url = \"https://dukegroups.com/club_signup?group_type=9999\"\n",
@@ -46,13 +44,13 @@
     "    descriptions = []\n",
     "\n",
     "    # Find the club entries on the page\n",
-    "    club_entries = soup.find_all(\"li\", class=\"listing-group-item\")\n",
+    "    club_entries = soup.find_all(\"li\", class_=\"listing-group-item\")\n",
     "\n",
     "    # Loop through the club entries and extract the information\n",
     "    for club in club_entries:\n",
     "\n",
     "        # Extract the name\n",
-    "        club_name = club.find(\"h2\", class=\"media-heading header-cg--h4\")\n",
+    "        club_name = club.find(\"h2\", class_=\"media-heading header-cg--h4\")\n",
     "\n",
     "        # Extract the link\n",
     "        club_link = club.find(\"a\")[\"href\"]\n",
@@ -98,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
