--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,241 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>link</th>\n",
+       "      <th>mission</th>\n",
+       "      <th>description</th>\n",
+       "      <th>ada_embedding</th>\n",
+       "      <th>similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Academic Guides</td>\n",
+       "      <td>https://dukegroups.com/AcademicGuides/</td>\n",
+       "      <td>We are members of the undergraduate community'...</td>\n",
+       "      <td>Academic Guides We are members of the undergra...</td>\n",
+       "      <td>[0.0005149160278961062, 0.0034498136956244707,...</td>\n",
+       "      <td>[[0.7763293559922031]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Academic Resource Center</td>\n",
+       "      <td>https://arc.duke.edu/</td>\n",
+       "      <td>We know you are already smart, but why stop th...</td>\n",
+       "      <td>Academic Resource Center We know you are alrea...</td>\n",
+       "      <td>[0.00914091058075428, -0.0035804063081741333, ...</td>\n",
+       "      <td>[[0.7664713627978429]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adopt A Grandparent</td>\n",
+       "      <td>https://sites.duke.edu/dukeaag</td>\n",
+       "      <td>Adopt a Grandparent is a student community ser...</td>\n",
+       "      <td>Adopt A Grandparent Adopt a Grandparent is a s...</td>\n",
+       "      <td>[0.015328762121498585, -0.009851355105638504, ...</td>\n",
+       "      <td>[[0.7385579984827709]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Agapé Campus Christian Fellowship</td>\n",
+       "      <td>http://www.agapeharvestchurch.org/</td>\n",
+       "      <td>To provide undergrad and graduate students at ...</td>\n",
+       "      <td>Agapé Campus Christian Fellowship To provide u...</td>\n",
+       "      <td>[0.00497807702049613, -0.01852617785334587, -0...</td>\n",
+       "      <td>[[0.7666686073262086]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>All of the Above</td>\n",
+       "      <td>https://dukegroups.com/AOTA/</td>\n",
+       "      <td>All of the Above presents a show annually incl...</td>\n",
+       "      <td>All of the Above All of the Above presents a s...</td>\n",
+       "      <td>[-0.019329318776726723, -0.0307923536747694, -...</td>\n",
+       "      <td>[[0.7540014417118854]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>The Muse Magazine</td>\n",
+       "      <td>https://dukegroups.com/MuseMaganize/</td>\n",
+       "      <td>The mission of The Muse is to provide a non-pa...</td>\n",
+       "      <td>The Muse Magazine The mission of The Muse is t...</td>\n",
+       "      <td>[-0.035801392048597336, -0.02092374861240387, ...</td>\n",
+       "      <td>[[0.7624587687481519]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>The Nightingales</td>\n",
+       "      <td>https://dukegroups.com/Nightingales/</td>\n",
+       "      <td>Oxytocin brain bath</td>\n",
+       "      <td>The Nightingales Oxytocin brain bath</td>\n",
+       "      <td>[-0.008025851100683212, 0.013976759277284145, ...</td>\n",
+       "      <td>[[0.7629713040683387]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>The Pitchforks</td>\n",
+       "      <td>http://www.dukepitchforks.com/</td>\n",
+       "      <td>The Pitchforks are first and foremost a TTBB, ...</td>\n",
+       "      <td>The Pitchforks The Pitchforks are first and fo...</td>\n",
+       "      <td>[0.010059971362352371, -0.03673028200864792, -...</td>\n",
+       "      <td>[[0.7428389759406148]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>The UNICEF Club at Duke University</td>\n",
+       "      <td>https://dukegroups.com/UNICEF/</td>\n",
+       "      <td>The mission of this organization will be to ab...</td>\n",
+       "      <td>The UNICEF Club at Duke University The mission...</td>\n",
+       "      <td>[-0.0023275224957615137, -0.025087695568799973...</td>\n",
+       "      <td>[[0.7741868013819468]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>The Wild Ones</td>\n",
+       "      <td>https://www.instagram.com/duke_wild_ones/</td>\n",
+       "      <td>The mission of The Wild Ones is to provide und...</td>\n",
+       "      <td>The Wild Ones The mission of The Wild Ones is ...</td>\n",
+       "      <td>[0.0004584000853355974, -0.029551943764090538,...</td>\n",
+       "      <td>[[0.7750710489628656]]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>350 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  title  \\\n",
+       "0                       Academic Guides   \n",
+       "1              Academic Resource Center   \n",
+       "2                   Adopt A Grandparent   \n",
+       "3     Agapé Campus Christian Fellowship   \n",
+       "4                      All of the Above   \n",
+       "..                                  ...   \n",
+       "345                   The Muse Magazine   \n",
+       "346                    The Nightingales   \n",
+       "347                      The Pitchforks   \n",
+       "348  The UNICEF Club at Duke University   \n",
+       "349                       The Wild Ones   \n",
+       "\n",
+       "                                          link  \\\n",
+       "0       https://dukegroups.com/AcademicGuides/   \n",
+       "1                        https://arc.duke.edu/   \n",
+       "2               https://sites.duke.edu/dukeaag   \n",
+       "3           http://www.agapeharvestchurch.org/   \n",
+       "4                 https://dukegroups.com/AOTA/   \n",
+       "..                                         ...   \n",
+       "345       https://dukegroups.com/MuseMaganize/   \n",
+       "346       https://dukegroups.com/Nightingales/   \n",
+       "347             http://www.dukepitchforks.com/   \n",
+       "348             https://dukegroups.com/UNICEF/   \n",
+       "349  https://www.instagram.com/duke_wild_ones/   \n",
+       "\n",
+       "                                               mission  \\\n",
+       "0    We are members of the undergraduate community'...   \n",
+       "1    We know you are already smart, but why stop th...   \n",
+       "2    Adopt a Grandparent is a student community ser...   \n",
+       "3    To provide undergrad and graduate students at ...   \n",
+       "4    All of the Above presents a show annually incl...   \n",
+       "..                                                 ...   \n",
+       "345  The mission of The Muse is to provide a non-pa...   \n",
+       "346                                Oxytocin brain bath   \n",
+       "347  The Pitchforks are first and foremost a TTBB, ...   \n",
+       "348  The mission of this organization will be to ab...   \n",
+       "349  The mission of The Wild Ones is to provide und...   \n",
+       "\n",
+       "                                           description  \\\n",
+       "0    Academic Guides We are members of the undergra...   \n",
+       "1    Academic Resource Center We know you are alrea...   \n",
+       "2    Adopt A Grandparent Adopt a Grandparent is a s...   \n",
+       "3    Agapé Campus Christian Fellowship To provide u...   \n",
+       "4    All of the Above All of the Above presents a s...   \n",
+       "..                                                 ...   \n",
+       "345  The Muse Magazine The mission of The Muse is t...   \n",
+       "346               The Nightingales Oxytocin brain bath   \n",
+       "347  The Pitchforks The Pitchforks are first and fo...   \n",
+       "348  The UNICEF Club at Duke University The mission...   \n",
+       "349  The Wild Ones The mission of The Wild Ones is ...   \n",
+       "\n",
+       "                                         ada_embedding              similarity  \n",
+       "0    [0.0005149160278961062, 0.0034498136956244707,...  [[0.7763293559922031]]  \n",
+       "1    [0.00914091058075428, -0.0035804063081741333, ...  [[0.7664713627978429]]  \n",
+       "2    [0.015328762121498585, -0.009851355105638504, ...  [[0.7385579984827709]]  \n",
+       "3    [0.00497807702049613, -0.01852617785334587, -0...  [[0.7666686073262086]]  \n",
+       "4    [-0.019329318776726723, -0.0307923536747694, -...  [[0.7540014417118854]]  \n",
+       "..                                                 ...                     ...  \n",
+       "345  [-0.035801392048597336, -0.02092374861240387, ...  [[0.7624587687481519]]  \n",
+       "346  [-0.008025851100683212, 0.013976759277284145, ...  [[0.7629713040683387]]  \n",
+       "347  [0.010059971362352371, -0.03673028200864792, -...  [[0.7428389759406148]]  \n",
+       "348  [-0.0023275224957615137, -0.025087695568799973...  [[0.7741868013819468]]  \n",
+       "349  [0.0004584000853355974, -0.029551943764090538,...  [[0.7750710489628656]]  \n",
+       "\n",
+       "[350 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from openai.embeddings_utils import get_embeddings, cosine_similarity\n",
+    "from openai import OpenAI\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "api_key = \"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\"\n",
+    "client = OpenAI(api_key=api_key)\n",
+    "\n",
+    "embedded_groups = pd.read_csv('output/embedded_groups.csv').dropna().reset_index(drop=True)\n",
+    "embedded_groups['ada_embedding'] = embedded_groups['ada_embedding'].apply(eval).apply(np.array)\n",
+    "\n",
+    "model = \"text-embedding-ada-002\"\n",
+    "\n",
+    "search_embedding = client.embeddings.create(input=\"education\", model=model).data[0].embedding\n",
+    "\n",
+    "search_embedding = np.array(search_embedding).reshape(1, -1)\n",
+    "\n",
+    "embedded_groups['similarity'] = embedded_groups['ada_embedding'].apply(lambda x: cosine_similarity(x.reshape(1, -1), search_embedding))\n",
+    "embedded_groups\n",
+    "# search_embeddings = "
    ]
   },
   {
