update text color and database

--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,35 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('output/resources_data.csv')\n",
+    "df.head()\n",
+    "df['embedding'] = df['Name'] + ', ' + df['Description'] + ', ' + df['Type']\n",
+    "\n",
+    "import openai\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "api_key = \"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\"\n",
+    "# api_key = \"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\"\n",
+    "client = OpenAI(api_key=api_key)\n",
+    "\n",
+    "def get_embedding(text, model=\"text-embedding-ada-002\"):\n",
+    "    # text = text.replace(\"\\n\", \" \")\n",
+    "    # print(text)\n",
+    "    # print(client.embeddings.create(input = [text], model=model).data[0].embedding)\n",
+    "    return client.embeddings.create(input = [text], model=model).data[0].embedding\n",
+    "\n",
+    "df = df.dropna().reset_index(drop=True)\n",
+    "\n",
+    "df['ada_embedding'] = df.embedding.apply(lambda x: get_embedding(x, model='text-embedding-ada-002'))\n",
+    "df.to_csv('output/ada_embeddings.csv', index=False)"
    ]
   },
   {
