--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,39 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Events       733\n",
+       "Group        567\n",
+       "Committee     11\n",
+       "Service        4\n",
+       "Resource       2\n",
+       "Board          1\n",
+       "Name: Type, dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect('database/database.db')\n",
+    "query = \"SELECT * FROM embedded_groups\"\n",
+    "df = pd.read_sql_query(query, conn)\n",
+    "conn.close()\n",
+    "df['Type'].value_counts()"
    ]
   },
   {
